style.css
html,
:root {
  /* FONTS */
  --screen-font: 'Silkscreen', sans-serif;
  --ui-font: 'Quantico', sans-serif;
  --regular: 400;
  --bold: 700;

  /* FONTS SIZES */
  --text-base: 16px;
  --xs-text: 0.5rem;
  --sm-text: 1rem;
  --md-text: 1.25rem;
  --lg-text: 1.5rem;
  --xl-text: 2rem;
  --2xl-text: 2.5rem;
  --3xl-text: 3rem;

  /* CONTAINER WIDTH */
  --sm-w: 360px;
  --md-w: 481px;
  --lg-w: 769px;
  --xl-w: 1024px;
  --full-w: 100%;

  height: 100%;
  margin: 0;
}

* {
  box-sizing: border-box;
  margin: 0px;
  padding: 0px;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

header {
  display: flex;
  justify-content: left;
  align-items: center;

  width: var(--full-w);
  height: 2em;

  h1 {
    margin: 1.5rem;
    font-size: var(--xl-text);
  }
}

main {
  display: flex;
  flex-flow: column wrap;
  justify-content: center;
  align-items: center;
  flex: 1;
  margin: 1.5em;
}

#calculator {
  display: flex;
  flex-direction: column;

  width: var(--sm-w);
  height: 600px;
  border: 2px solid black;
  border-radius: 1.5rem;
  font-family: var(--ui-font);

  & #display {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas:
      'memory ... operation operation operation operation'
      'result result result result result result'
      'result result result result result result';

    max-width: var(--full-w);
    min-height: 6.5rem;
    height: 6rem;
    margin: 1.5rem;
    border-radius: 0.5rem;
    background-color: #607d8b;
    color: #000000;
    font-family: var(--screen-font);
    text-align: right;
    border: 3px solid #455a64;
    box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);

    & #memory {
      grid-area: memory;
    }

    & #operation {
      grid-area: operation;
      font-size: var(--md-text);
    }

    & #result {
      grid-area: result;
      text-align: right;
      font-size: var(--2xl-text);

      &.error {
        font-size: var(--md-text);
        text-align: center;
      }
    }
  }

  & #buttons {
    height: 100%;
    margin: 1.5rem;
    margin-top: 0;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-areas:
      'mc mr subtract add backspace'
      'ac ce invert root sqr'
      'seven eight nine divide percent'
      'four five six multiply reciprocal'
      'one two three minus equals'
      'zero zero decimal sum equals';
    gap: 0.25rem;

    & button {
      font-family: var(--ui-font);
      font-weight: var(--bold);
      font-size: var(--md-text);
      border-radius: 0.5rem;
    }

    /* FIRST ROW */
    & [data-memory='clear'] {
      grid-area: mc;
      border-top-left-radius: 1rem;
    }
    & [data-memory='recall'] {
      grid-area: mr;
    }
    & [data-memory='subtract'] {
      grid-area: subtract;
    }
    & [data-memory='add'] {
      grid-area: add;
    }
    & [data-function='backspace'] {
      grid-area: backspace;
    }

    /* SECOND ROW */
    & [data-clear='all'] {
      grid-area: ac;
      background-color: #ff7f53;
    }
    & [data-clear='entry'] {
      grid-area: ce;
      background-color: #ff7f53;
    }
    & [data-function='invert'] {
      grid-area: invert;
    }
    & [data-function='root'] {
      grid-area: root;
    }
    & [data-function='sqr'] {
      grid-area: sqr;
    }

    /* THIRD ROW */
    & [data-number='7'] {
      grid-area: seven;
    }
    & [data-number='8'] {
      grid-area: eight;
    }
    & [data-number='9'] {
      grid-area: nine;
    }
    & [data-operator='/'] {
      grid-area: divide;
    }
    & [data-function='percent'] {
      grid-area: percent;
    }

    /* FOURTH ROW */
    & [data-number='4'] {
      grid-area: four;
    }
    & [data-number='5'] {
      grid-area: five;
    }
    & [data-number='6'] {
      grid-area: six;
    }
    & [data-operator='*'] {
      grid-area: multiply;
    }
    & [data-function='reciprocal'] {
      grid-area: reciprocal;
    }

    /* FIFTH ROW */
    & [data-number='1'] {
      grid-area: one;
    }
    & [data-number='2'] {
      grid-area: two;
    }
    & [data-number='3'] {
      grid-area: three;
    }
    & [data-operator='-'] {
      grid-area: minus;
    }

    /* SIXTH ROW */
    & [data-number='.'] {
      grid-area: decimal;
    }
    & [data-number='0'] {
      grid-area: zero;
      border-bottom-left-radius: 1rem;
    }
    & [data-operator='+'] {
      grid-area: sum;
    }
    & [data-equals] {
      grid-area: equals;
      border-bottom-right-radius: 1rem;
      color: #f7f7ff;
      background-color: #0b816b;
    }
  }
}

[data-number] {
  background-color: #252627;
  color: #f7f7ff;
}
[data-function],
[data-operator] {
  background-color: #daddd8;
}

